WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52725
IndexedDB: IDBObjectStore.get should fire onsuccess rather than onerror
https://bugs.webkit.org/show_bug.cgi?id=52725
Summary
IndexedDB: IDBObjectStore.get should fire onsuccess rather than onerror
Hans Wennborg
Reported
2011-01-19 10:09:53 PST
IndexedDB: IDBObjectStore.get should fire onsuccess rather than onerror
Attachments
Patch
(11.08 KB, patch)
2011-01-19 10:14 PST
,
Hans Wennborg
jorlow
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Wennborg
Comment 1
2011-01-19 10:14:36 PST
Created
attachment 79444
[details]
Patch
Jeremy Orlow
Comment 2
2011-01-19 10:38:14 PST
Comment on
attachment 79444
[details]
Patch r=me...thanks!
Hans Wennborg
Comment 3
2011-01-20 01:40:04 PST
Committed
r76217
: <
http://trac.webkit.org/changeset/76217
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug