2011-01-20  Hans Wennborg  <hans@chromium.org>

Reviewed by Jeremy Orlow.

        IndexedDB: IDBObjectStore.get should fire onsuccess rather than onerror
        https://bugs.webkit.org/show_bug.cgi?id=52725

        Update layout tests to expect the onsuccess handler to be fired
        when looking up non-existing objects.

        * storage/indexeddb/create-and-remove-object-store-expected.txt:
        * storage/indexeddb/create-and-remove-object-store.html:
        * storage/indexeddb/cursor-delete-expected.txt:
        * storage/indexeddb/cursor-delete.html:
        * storage/indexeddb/objectstore-removeobjectstore-expected.txt:
        * storage/indexeddb/objectstore-removeobjectstore.html:
2011-01-20  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        IndexedDB: IDBObjectStore.get should fire onsuccess rather than onerror
        https://bugs.webkit.org/show_bug.cgi?id=52725

        Let IDBObjectStore.get() fire the onsuccess handler with the value
        'undefined' for when an object does not exist in the store.

        Update SerializedScriptValue to provide such an undefined value.

        * bindings/v8/SerializedScriptValue.cpp:
        (WebCore::SerializedScriptValue::nullValue):
        (WebCore::SerializedScriptValue::undefinedValue):
        * bindings/v8/SerializedScriptValue.h:
        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::getInternal):

Canonical link: https://commits.webkit.org/66455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76217 268f45cc-cd09-0410-ab3c-d52691b4dbfc